--- a/gateway/src/views/video-list.hbs
+++ b/gateway/src/views/video-list.hbs
@@ -28,7 +28,7 @@
             </div>
 
             <div class="m-4">
-                <h1>Videos Update</h1>
+                <h1>Videos Edited</h1>
                 <div id="video-list" class="m-4">
                     {{#if videos}}
                         {{#each videos}}
