force triggering pipeline

--- a/gateway/src/views/video-list.hbs
+++ b/gateway/src/views/video-list.hbs
@@ -29,6 +29,7 @@
 
             <div class="m-4">
                 <h1>Videos Edited</h1>
+                <p>New Text</p>
                 <div id="video-list" class="m-4">
                     {{#if videos}}
                         {{#each videos}}
