triggering the pipeline

--- a/gateway/src/views/video-list.hbs
+++ b/gateway/src/views/video-list.hbs
@@ -28,7 +28,7 @@
             </div>
 
             <div class="m-4">
-                <h1>Videos Edited</h1>
+                <h1>Videos Edted</h1>
                 <p>New Text changes</p>
                 <div id="video-list" class="m-4">
                     {{#if videos}}
